ci: fix workflows and modernize project infrastructure
- Fix release workflow with required inputs (repo_name, docker_image)
- Remove paths trigger from CodeQL workflow for broader coverage
- Update dependencies: PyGithub 2.8.1, python-semantic-release 10.4.1
- Add comprehensive security policy and vulnerability reporting
- Add Dockerfile with PYTHONPATH environment variable
- Update issue templates with proper YAML formatting
- Reduce Dependabot open PR limits for better management
- Remove deprecated config files and unused templates
- Standardize contact info across all templates

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -2,7 +2,8 @@ name: Bug Report
 description: Report a bug to help me improve Wakatime Leaderboards
 title: "Bug:"
 labels: ["bug"]
-assignees: "nicconike"
+assignees:
+    - nicconike
 body:
     - type: markdown
       attributes:
