--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
 # .dockerignore
 __pycache__
 __pycache__/
+.cache/
 *.pyc
 *.pyo
 *.pyd
@@ -15,6 +16,7 @@ __pycache__/
 Thumbs.db
 build/
 dist/
+site/
 .git/
 .gitignore
 .github/
@@ -23,10 +25,15 @@ dist/
 .env
 .env.example
 .venv
+.pre-commit-config.yaml
 venv/
 env/
 tests/
+templates/
+docs/
 LICENSE
 CHANGELOG.md
 README.md
-action.yml
+*.yml
+pytest.ini
+sonar-project.properties
