--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,10 @@ blank_issues_enabled: true
 contact_links:
     - name: Questions
       url: https://discord.gg/UbetHfu
-      about: You can join or create new discussions on Discord.
-    - name: Script does not work
+      about: You can join and create new discussions on Discord.
+    - name: Code does not work
       url: https://github.com/Nicconike/Wakatime-Leaderboards/blob/master/.github/CONTRIBUTING.md
       about: Before opening a new issue, please make sure to read CONTRIBUTING.md
+    - name: Security Vulnerability
+      url: https://mailto:github.giving328@passmail.com
+      about: Report security issues privately via email - do not create public issues
