--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,26 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Wakatime-Leaderboards"
+version = "1.2.3"
 authors = [{ name = "Nicco", email = "github.giving328@passmail.com" }]
 description = "Automated WakaTime Leaderboards for your GitHub profile"
 readme = "README.md"
 requires-python = ">=3.8"
+keywords = [
+    "wakatime",
+    "github",
+    "stats",
+    "api",
+    "automation",
+    "productivity",
+    "coding",
+    "development",
+    "programming",
+    "leaderboards",
+]
 license = "MIT"
 license-files = ["LICENSE"]
-dynamic = ["version"]
-dependencies = ["PyGithub==2.6.1", "python-semantic-release==10.1.0"]
+dependencies = ["PyGithub==2.8.1", "python-semantic-release==10.4.1"]
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -21,20 +33,21 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: Implementation :: CPython",
     "Operating System :: OS Independent",
     "Development Status :: 5 - Production/Stable",
     "Framework :: Pytest",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Testing :: Mocking",
     "Topic :: Software Development :: Version Control :: Git",
     "Topic :: System :: Monitoring",
-    "Topic :: Games/Entertainment",
     "Topic :: Utilities",
 ]
 
 [project.optional-dependencies]
-dev = ["bandit==1.8.5", "pylint==3.3.7", "pipdeptree==2.26.1", "twine==6.1.0"]
-test = ["pytest-cov==6.2.1"]
+dev = ["bandit==1.8.6", "pylint==3.3.9", "pipdeptree==2.28.0", "twine==6.2.0"]
+test = ["pytest-cov==7.0.0"]
 
 [project.urls]
 Homepage = "https://github.com/Nicconike/Wakatime-Leaderboards"
@@ -43,33 +56,17 @@ Documentation = "https://github.com/Nicconike/Wakatime-Leaderboards/blob/master/
 Issues = "https://github.com/nicconike/wakatime-leaderboards/issues"
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["api*"]
+where = ["api"]
 
 [tool.semantic_release]
 version_variables = ["api/main.py:__version__"]
+version_toml = ["pyproject.toml:project.version"]
 version_source = "tag"
 tag_format = "v{version}"
 commit_message = "chore(release): Version Release v{version}"
-branch = "master"
-
-[tool.semantic_release.commit_parser_options]
-allowed_tags = [
-    "build",
-    "chore",
-    "ci",
-    "docs",
-    "feat",
-    "fix",
-    "perf",
-    "style",
-    "refactor",
-    "test",
-    "revert",
-]
-minor_tags = ["feat"]
-patch_tags = ["fix", "perf"]
-default_bump_level = 0
+logging_use_named_masks = true
+commit_parser = "conventional"
+commit_parser_options = { parse_squash_commits = true, ignore_merge_commits = true }
 
 [tool.semantic_release.remote]
 type = "github"
@@ -77,16 +74,21 @@ token = { env = "GH_TOKEN" }
 
 [tool.semantic_release.changelog]
 default_templates.changelog_file = "CHANGELOG.md"
-changelog_mode = "update"
-insertion_flag = "<!-- version list -->"
-template_dir = "templates"
-release_notes_template = "release_notes.md.j2"
-exclude_commit_patterns = ["^chore:", "^style:"]
+mode = "update"
+insertion_flag = "<!-- CHANGELOG -->"
+exclude_commit_patterns = [
+    '''chore(?:\([^)]*?\))?: .+''',
+    '''ci(?:\([^)]*?\))?: .+''',
+    '''refactor(?:\([^)]*?\))?: .+''',
+    '''style(?:\([^)]*?\))?: .+''',
+    '''test(?:\([^)]*?\))?: .+''',
+    '''build\((?!deps\): .+)''',
+    '''Merged? .*''',
+    '''Initial Commit*''',
+]
 
 [tool.semantic_release.changelog.environment]
 trim_blocks = true
-autoescape = false
-ignore_token_for_push = false
 
 [tool.semantic_release.publish]
 upload_to_vcs_release = true
